fixed responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -745,7 +745,7 @@ a {
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 391px) {
     html {
         background-size: 500%;
     }
